2002-02-08  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03025] fix image loading on EWS4800
	* image.c (loadImage): exit if symlink failed
			exit if fopen failed

2002-02-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03022] SSL certificates of frame body
	* frame.h (frame_body): add ssl_certificate
	* frame.c (frame_download_source): save ssl_certificate
	* map.c (append_frame_info): display ssl_certificate of frame_body

2002-02-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03021] Bug#132934: w3m should recognize file:/uris
				in chkURLBuffer function
	* main.c (chkURLBuffer): add "file:" 

2002-02-08  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03017] URI scheme is case insensitive
	* url.c (searchURIMethods): s/strcmp/strcasecmp/

2002-02-08  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 03011] segmentation fault on <input> tag without <form>
	* file.c (process_input): tmp initialization fix

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [emacs-w3m:02733] for emacs-w3m better rendering with inline image
	* main.c (MAIN): activeImage = TRUE when -halfdump & display_image=1

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03006] fix form order in table
	* file.c (process_form): static
			fix form index order
			method should be quoted
	* file.c (process_form): added
	* file.c (HTMLlineproc2body): add form_id
	* html.c (ALST_FORM_INT): added
	* html.c (form_int): update

2002-02-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03005] fix Bad cert ident
	* istream.c (ssl_match_cert_ident): added
	* istream.c (ssl_check_cert_ident): use ssl_match_cert_ident()

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02999] don't ask accept bad cert when background downloading
	* file.c (getAuthCookie): if QuietMessage, return NULL
	* file.c (inputAnswer): if QuietMessage, input "n"

2002-02-05  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
